--- a/WebApp/Resources/Views/Home/Index.vi-VN.resx
+++ b/WebApp/Resources/Views/Home/Index.vi-VN.resx
@@ -117,11 +117,23 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Adult" xml:space="preserve">
+    <value>Người lớn</value>
+  </data>
+  <data name="ArrivalDate" xml:space="preserve">
+    <value>Ngày nhận phòng</value>
+  </data>
   <data name="Bar" xml:space="preserve">
     <value>Bar</value>
   </data>
   <data name="BookNow" xml:space="preserve">
     <value>Đặt bây giờ</value>
+  </data>
+  <data name="Child" xml:space="preserve">
+    <value>Trẻ em</value>
+  </data>
+  <data name="DepartureDate" xml:space="preserve">
+    <value>Ngày trả phòng</value>
   </data>
   <data name="Gymnesium" xml:space="preserve">
     <value>Phòng Gym</value>
