--- a/WebApp/Resources/Views/Home/Index.en-US.resx
+++ b/WebApp/Resources/Views/Home/Index.en-US.resx
@@ -121,7 +121,7 @@
     <value>Adult</value>
   </data>
   <data name="ArrivalDate" xml:space="preserve">
-    <value>ArrivalDate</value>
+    <value>Arrival Date</value>
   </data>
   <data name="Bar" xml:space="preserve">
     <value>Bar</value>
@@ -133,7 +133,7 @@
     <value>Child</value>
   </data>
   <data name="DepartureDate" xml:space="preserve">
-    <value>DepartureDate</value>
+    <value>Departure Date</value>
   </data>
   <data name="Gymnesium" xml:space="preserve">
     <value>Gymnesium</value>
@@ -206,6 +206,9 @@
   </data>
   <data name="Restaurant" xml:space="preserve">
     <value>Restaurant</value>
+  </data>
+  <data name="RoomTypes" xml:space="preserve">
+    <value>Room Types</value>
   </data>
   <data name="RoyalFacilities" xml:space="preserve">
     <value>Royal Facilities</value>
