--- a/WebApp/Resources/Views/Home/Index.en-US.resx
+++ b/WebApp/Resources/Views/Home/Index.en-US.resx
@@ -139,13 +139,13 @@
     <value>Gymnesium</value>
   </data>
   <data name="HomeText1" xml:space="preserve">
-    <value>If you are looking at blank cassettes on the web, you may be very confused at the&lt;br&gt; difference in price. You may see some for as low as $.17 each.</value>
+    <value>Located on the beach, Royal Hotel creates a luxurious and relaxing space with modern architecture and professional services. With comfortable rooms and enthusiastic staff, this is the ideal destination for a memorable vacation. Whether you want to relax or explore, this is the perfect place to experience it.</value>
   </data>
   <data name="HomeText10" xml:space="preserve">
-    <value>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</value>
+    <value>Modern equipment, spacious space, and professional guides help visitors maintain the best physical strength and health throughout their vacation.</value>
   </data>
   <data name="HomeText11" xml:space="preserve">
-    <value>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</value>
+    <value>Elegant, relaxing space, serving special drinks and cocktails, accompanied by music space, creating interesting and unique experiences for visitors.</value>
   </data>
   <data name="HomeText12" xml:space="preserve">
     <value>About Us &lt;br&gt;Our History&lt;br&gt;Mission &amp; Vision</value>
@@ -175,19 +175,19 @@
     <value>We all live in an age that belongs to the young at heart. Life that is becoming extremely fast</value>
   </data>
   <data name="HomeText5" xml:space="preserve">
-    <value>Who are in extremely love with eco friendly system.</value>
+    <value>Providing excellent amenities and services, focusing on customer experience at the hotel.</value>
   </data>
   <data name="HomeText6" xml:space="preserve">
-    <value>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</value>
+    <value>The restaurant is a place that combines unique flavors with a luxurious, cozy space. With a team of talented chefs and professional service style.</value>
   </data>
   <data name="HomeText7" xml:space="preserve">
-    <value>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</value>
+    <value>Vibrant activity center, providing modern workout space and diverse sports activities, helping visitors enjoy a perfect and active vacation.</value>
   </data>
   <data name="HomeText8" xml:space="preserve">
-    <value>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</value>
+    <value>The swimming pool is a highlight of relaxation and entertainment with pool services and fresh atmosphere providing an enjoyable experience.</value>
   </data>
   <data name="HomeText9" xml:space="preserve">
-    <value>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</value>
+    <value>The car rental service at the hotel is flexible and provides a variety of quality cars, making it easy to explore locations comfortably and conveniently.</value>
   </data>
   <data name="HomeTitle1" xml:space="preserve">
     <value>Away from monotonous life</value>
