--- a/WebApp/Resources/Views/Identity/EmailVerify.en-US.resx
+++ b/WebApp/Resources/Views/Identity/EmailVerify.en-US.resx
@@ -120,7 +120,7 @@
   <data name="Continue" xml:space="preserve">
     <value>Continue</value>
   </data>
-  <data name="EmailOnTheWay1" xml:space="preserve">
+  <data name="EmailOnTheWay" xml:space="preserve">
     <value>Email on the way</value>
   </data>
   <data name="EmailVerify" xml:space="preserve">
